2003-07-02 17:28  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/ftfont.m (-initWithFontName:matrix:screenFont:):
	Return nil if it's not a valid font.

2003-07-01 16:37  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/ftfont.m: Use the correct set of flags when loading
	glyphs for freetype >=2.1.3. Anti-alias by default if there is no
	defaults value for GSFontAntiAlias.

2003-06-30 18:11  Alexander Malmberg <alexander@malmberg.org>

	* Source/xlib/XGFont.m (-xCharStructForGlyph:):	Don't try to treat
	NSGlyph pointers as unichar pointers; break on non-little-endian
	systems.

2003-06-29 17:34  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/ftfont.m (-initWithFontName:matrix:screenFont:): Round
	the matrix entries for screen fonts to integers to get consistent
	handling of non-integer sized screen fonts.

2003-06-28 15:27  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/ftfont.m: Use a specific table when translating
	face names. Add a list of standard face names so make_strings can
	generate .strings files.

	* Source/GNUmakefile: Add nfontFaceNames.strings to the list of
	localized resources. Set the language list to English and Swedish.

	* Source/GNUmakefile.preamble: Add a quick hack to make make_strings
	pick up the .m files in all subprojects.

	* Source/English.lproj/nfontFaceNames.strings,
	Source/Swedish.lproj/nfontFaceNames.strings: Add English (dummy) and
	Swedish translations of the nfont face names.

2003-06-27 Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gpbs.m: Removed unused methods no longer in protocol.

2003-06-25  Adam Fedor  <fedor@gnu.org>

	* Tools/gpbs.1.gz: New file (from Martin Brecher).
	* Tools/GNUmakefile.postamble (after-install): Install it.

2003-06-26 00:33  Alexander Malmberg <alexander@malmberg.org>

	* Source/ftfont.m (-_generateGlyphsForRun:at:): Add (experimental)
	handling of utf16 to glyph generation so planes beyond the BMP can
	be used.
